--- a/k about.html
+++ b/k about.html
@@ -80,7 +80,7 @@
     
 
   <footer>
-    <a href="k index.html"> Back</a>
+    <a href="index.html"> Back</a>
     <H3>Thank You For Wisiting</H3>
   </footer>
 </body>
